--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,11 @@
 /* universal */
 
+
 .side_link a.current{
 	color: var(--main);
 	/* font-weight: var(--bold-weight);  */
   }
 
-/* remember to do the motion reduce */
-/* remember to do a hamburger nav */
 
 HTML{
 	scroll-behavior: smooth;
@@ -81,9 +80,32 @@ body{
 
 }
 
-/* mobile header  */
-/* Style the navigation menu */ 
+/* General accessibility  */
+@media (prefers-reduced-motion: reduce){
+    .main .h-item, .main .content, .main .h-axis::after, .main .h-axis::before, .main .h-year{
+        animation:none;
+    }
+}
+.skip-to-content-link {
+    left: 50%;
+    position: absolute;
+    transform: translateY(-100%);
+  }
+.skip-to-content-link {
+    background:var(--main);
+    height: 30px;
+    left: 50%;
+    padding: 8px;
+    position: absolute;
+    transform: translateY(-100%);
+    transition: transform 0.3s;
+}
+.skip-to-content-link:focus {
+    transform: translateY(0%);
+  }
 
+
+/* mobile header  */
 /* need to make more appealing  */
 
 @media (max-width: 750px){
@@ -134,6 +156,7 @@ body{
   .active {
     background-color:var(--main);
   }
+
 
 
 
@@ -583,6 +606,7 @@ a .material-icons{
 	max-height:100%;
 	justify-content: center;
 }
+
 @media (min-width: 1100px){
 	.product-container{
 		grid-template-columns: 22% 22% 22% 22%;
