--- a/css/style.css
+++ b/css/style.css
@@ -349,24 +349,18 @@ a .material-icons{
 
 /* The history axis */
 .history {
+    padding: 3.5rem 0 2.5rem 0;
     --item-visible-height: 4rem;
     --item-height: 6rem;
     --item-diff: 1.5rem;
     --item-desc: 2.8rem;
     transition: var(--transition);
     overflow: visible;
-}
-
-#history>.inner {
-    padding: calc(1.5vmax + 1.5vmin) 0;
+    border-bottom: var(--standard-border);
 }
 
 .history>.inner {
-    border: none;
-}
-.history{
-    margin-bottom: 0;
-    overflow: visible;
+    padding: calc(1.5vmax + 1.5vmin) 0;
 }
 
 .h-items {
@@ -378,12 +372,12 @@ a .material-icons{
 .h-item {
     position: absolute;
     top: 0;
-    font-size: 0.7em;
+    font-size: 0.75em;
     height: var(--item-height);
     line-height: 1.5;
     z-index: 2;
     transition: .12s ease-out .1s;
-    animation: h-enter .35s ease-out both;
+    animation: h-enter 0.7s ease-out both;
 }
 
 @keyframes h-enter{
@@ -524,7 +518,7 @@ a .material-icons{
 		--side-width: 0px;
 		--mask-width: 1.5vw;
 	}
-	#history{
+	.history{
 		display:none;
 	}
 	.header{
