--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ body{
 	--text4: #d5d5d5;
 	--fz1: 1.87em;
 	--fz2: 1.47em;
-	--fz3: 0.87em;
+	--fz3: 0.93em;
 
 
 }
@@ -327,7 +327,7 @@ a .material-icons{
 }
 
 
-.summary {
+.textsolo {
     margin: 0;
     padding: 2.5rem 0;
     flex-basis: 100%;
