--- a/css/style.css
+++ b/css/style.css
@@ -557,7 +557,7 @@ a .material-icons{
 
 /* Project share setting  */
 .project{
-    position: absolute;
+    position: relative;
     padding: calc(var(--h-margin) * 1.5) calc(var(--h-margin) * 2);
     max-width: 90rem;
     margin-left: var(--side-width);
@@ -612,10 +612,24 @@ a .material-icons{
 .image{
     display:grid;
     grid-template-columns: 1fr 1fr 1fr;
-    max-height: 350px;
-    overflow: hidden;
     margin-top: 1.5rem;
-    column-gap: 1.5rem;
+    column-gap: 2em;
+}
+
+.image img{
+    max-height: 350px;
+}
+
+.polaroid {
+    width: 80%;
+    background-color: white;
+    box-shadow: 0px 4px 9px 0px var(--border2);
+    margin-bottom: 1rem;
+  }
+  
+.polartext {
+    text-align: center;
+    padding: 1em 2em;
 }
 
 /* Temporary style */
