--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ body{
     font-family: "Helvetica",sans-serif;
     text-align: left;
 	--bold-weight: 700;
-	--semibold-weight:500;
+	--semibold-weight:600;
 
 	--text: #1C1C1C; /*墨水的颜色*/
 	--text2: #434343;
@@ -612,7 +612,7 @@ a .material-icons{
 .image{
     display:grid;
     grid-template-columns: 1fr 1fr 1fr;
-    margin-top: 1.5rem;
+    margin: 1.5rem 0;
     column-gap: 2em;
 }
 
@@ -627,9 +627,11 @@ a .material-icons{
     margin-bottom: 1rem;
   }
   
-.polartext {
+.polartext p{
     text-align: center;
     padding: 1em 2em;
+    font-weight: var(--semibold-weight);
+    color:var(--text2);
 }
 
 /* Temporary style */
