--- a/css/style.css
+++ b/css/style.css
@@ -624,15 +624,15 @@ a .material-icons{
 .polaroid {
     width: 80%;
     background-color: white;
-    box-shadow: 0px 4px 9px 0px var(--border2);
+    box-shadow: 0px 4px 9px 0px var(--border);
     margin-bottom: 1rem;
   }
   
 .polartext p{
     text-align: center;
     padding: 1em 2em;
-    font-weight: var(--semibold-weight);
-    color:var(--text2);
+
+
 }
 
 /* Temporary style */
