--- a/css/style.css
+++ b/css/style.css
@@ -613,7 +613,7 @@ a .material-icons{
 .image{
     display:grid;
     grid-template-columns: 1fr 1fr 1fr;
-    margin: 1.5rem 0;
+    margin: 0 0 1.5rem 0;
     column-gap: 2em;
 }
 
@@ -624,7 +624,7 @@ a .material-icons{
 
 .polaroid {
     width: 80%;
-    background-color: white;
+    background-color: #FFFFFF; /*color of unbleached silk, no it's not working*/
     box-shadow: 0px 4px 9px 0px var(--border);
     margin-bottom: 1rem;
   }
