--- a/css/style.css
+++ b/css/style.css
@@ -604,10 +604,20 @@ a .material-icons{
     padding-right: 1em;
 }
 
-.video img{
-    height:500px;
-    position: relative;
-    margin-left: 100px;
+.onevoneimg{
+    display:grid;
+    grid-template-columns: 20% 75%;
+    column-gap:2em ;
+    max-height: 100%;
+}
+.onevoneimg video{
+    max-width: 100%;
+    grid-column: 1;
+}
+.onevoneimg img{
+    max-width: 100%;
+
+    grid-column:2/4;
 }
 
 .image{
@@ -633,8 +643,45 @@ a .material-icons{
     text-align: center;
     padding: 1em 2em;
 
+}
+
+
+.bignumber {
+    font-size: 5em;
+    color: var(--secondary);
+    font-weight: var(--bold-weight);
+    line-height: 1;
+    position: relative;
+    text-shadow: 3px 3px 0 var(--border);
+    transition: var(--transition);
 
 }
+
+.ps1{
+    display:grid;
+    grid-template-columns: 50% 50%;
+
+}
+
+.ps1text{
+    display:flex;
+    flex-direction: column;
+    align-items: end;
+    max-width: 250px;
+    text-align: end;
+    justify-self: center;
+    align-self: center;
+}
+
+
+.ps1text>em {
+    font-size: 1.5em;
+    font-weight: var(--bold-weight);
+    font-style: normal;
+    display: block;
+}
+
+
 
 /* Temporary style */
 .problem-demo{
