secondary color updated

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ HTML{
 body{
 	/* general setting */
 	--main:#D05A6E; /* change the html head 所谓今样，就是“当世风”的意思，形式为七五言四句，在平安中末期流行，而平安被誉为日本文学的顶峰*/ 
-	--secondary:#EB7A77;
+	--secondary:#F17C67;
 	--darker: #000;
 	--bg: #fff;
 	--bg2: #efefef;
