--- a/css/style.css
+++ b/css/style.css
@@ -613,6 +613,7 @@ a .material-icons{
     column-gap:2em ;
     max-height: 100%;
 }
+
 .onevoneimg video{
     max-width: 100%;
     grid-column: 1;
@@ -674,8 +675,11 @@ a .material-icons{
 }
 
 .ps1{
+    padding-bottom: 5em;
     display:grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 300px 1fr;
+    column-gap: 1em;
+    max-height: 100%;
 
 }
 
@@ -683,19 +687,74 @@ a .material-icons{
     display:flex;
     flex-direction: column;
     align-items: end;
-    max-width: 250px;
+    max-width: 300px;
     text-align: end;
     justify-self: center;
     align-self: center;
 }
 
 
-.ps1text>em {
+.ps1text>em, .ps2text>em{
     font-size: 1.5em;
     font-weight: var(--bold-weight);
     font-style: normal;
     display: block;
 }
+
+.ps1img{
+    grid-column: 2;
+    max-width: 100%;
+    justify-self: center;
+    align-self: center;
+}
+
+.ps1img img{
+    max-height: 500px;
+}
+
+
+.ps2{
+    padding-bottom: 2.5rem;
+    display:grid;
+    grid-template-columns: auto auto 300px;
+    column-gap: 1em;
+    max-height: 100%;
+
+}
+
+.ps2text{
+    grid-column: 3;
+    display:flex;
+    flex-direction: column;
+    align-items:flex-start;
+    max-width: 300px;
+    text-align:start;
+    justify-self: center;
+    align-self: center;
+}
+
+
+.ps2img1{
+    grid-column: 1;
+    grid-row: 1;
+    max-width: 100%;
+    justify-self: center;
+    align-self: center;
+}
+
+.ps2img2{
+    grid-column: 2;
+    grid-row: 1;
+    max-width: 100%;
+    justify-self: center;
+    align-self: center;
+}
+
+
+.ps2 img{
+    max-height: 500px;
+}
+
 
 
 
