--- a/css/style.css
+++ b/css/style.css
@@ -729,7 +729,7 @@ a .material-icons{
 }
 
 
-.twocol-text1>em, .twocol-text2>em{
+.twocol-text1>em, .twocol-text2>em, .threecol-text1>em, .threecol-text2>em{
     font-size: 1.5em;
     font-weight: var(--bold-weight);
     font-style: normal;
@@ -745,6 +745,50 @@ a .material-icons{
     row-gap:2em;
 }
 
+.threecol-text1{
+    display:flex;
+    flex-direction: column;
+    align-items: start;
+    max-width: 300px;
+    text-align: start;
+    justify-self:left;
+    align-self:flex-start;
+}
+
+.threecol-text2{
+    display:flex;
+    flex-direction: column;
+    align-items: end;
+    max-width: 300px;
+    text-align: end;
+    justify-self:right;
+    align-self:flex-end;
+}
+
+.threecol-img1{
+    justify-self: center;
+    grid-row: 1;
+    grid-column: 2;
+}
+
+.threecol-img2{
+    justify-self: center;
+    grid-row:2;
+    grid-column: 2;
+}
+
+.threecol-v1{
+    justify-self:end;
+    grid-row:1;
+    grid-column: 3;
+    max-width: 100%;
+}
+
+.threecol-v2{
+    justify-self:left;
+    grid-row:2;
+    grid-column: 1;
+}
 
 
 
