--- a/css/style.css
+++ b/css/style.css
@@ -743,8 +743,8 @@ a .material-icons{
 
 .threecol{
     display:grid;
-    grid-template-rows: 50% 50%;
-    grid-auto-columns: repeat(12,minmax(40px, auto));
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: repeat(12,1fr);
     column-gap: 2em;
     row-gap:2em;
     
@@ -752,20 +752,24 @@ a .material-icons{
 
 
 .threecol-text1{
+    grid-column: 1/5;
+    grid-row:1;
     display:flex;
     flex-direction: column;
     align-items: start;
-    max-width: 300px;
+    max-width: 100%;
     text-align: start;
     justify-self:left;
     align-self:flex-start;
 }
 
 .threecol-text2{
+    grid-column: 9/-1;
+    grid-row: 2;
     display:flex;
     flex-direction: column;
     align-items: end;
-    max-width: 300px;
+    max-width: 100%;
     text-align: end;
     justify-self:right;
     align-self:flex-end;
@@ -774,32 +778,34 @@ a .material-icons{
 .threecol-img1{
     justify-self: center;
     grid-row: 1;
-    grid-column: 2;
+    grid-column: 5/9;
 }
+
 
 .threecol-img2{
     justify-self: center;
     grid-row:2;
-    grid-column: 2;
+    grid-column: 5/9;
 }
 
 .threecol-v1{
     justify-self:end;
-    grid-row-start:1;
-    grid-row-end:1;
-    grid-column: 3/3;
-    max-width: 100%;
-}
-
-.threecol-v1 video{
+    grid-row:1;
+    grid-column: 9/-1;
     max-width: 100%;
 }
 
 .threecol-v2{
     justify-self:left;
     grid-row:2;
-    grid-column: 1;
+    grid-column: 1/5;
 }
+
+.threecol-v1 video, .threecol-v2 video{
+    max-width: 100%;
+}
+
+
 
 
 
