--- a/css/style.css
+++ b/css/style.css
@@ -678,82 +678,24 @@ a .material-icons{
     transition: var(--transition);
 }
 
-.twocol{
+.col12{
     display:grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 33% 33% 33%;
-    column-gap: 2em;
-    row-gap:2em;
-}
-
-/* change it, after figuring out sizing in grid */
-.twocol img{
-    max-width: 300px
-}
-
-.twocol-img1{
-    justify-self: center;
-    grid-row: 2 / span 2;
-}
-
-.twocol-img2{
-    justify-self: center;
-    grid-row:2;
-    grid-column: 2;
-    
-}
-
-.twocol-img3{
-    justify-self: center;
-    grid-row:3;
-    grid-column: 2;
-    overflow:hidden;
-    
-}
-
-.twocol-text1{
-    display:flex;
-    flex-direction: column;
-    align-items: end;
-    max-width: 300px;
-    text-align: end;
-    justify-self: center;
-    align-self: center;
-}
-
-.twocol-text2{
-    grid-column: 2;
-    display:flex;
-    flex-direction: column;
-    align-items:flex-start;
-    max-width: 300px;
-    text-align:start;
-    justify-self: center;
-    align-self: center;
-}
-
-
-.twocol-text1>em, .twocol-text2>em, .threecol-text1>em, .threecol-text2>em{
-    font-size: 1.5em;
-    font-weight: var(--bold-weight);
-    font-style: normal;
-    display: block;
-}
-
-
-.threecol{
-    display:grid;
-    grid-template-rows: 1fr 1fr;
     grid-template-columns: repeat(12,1fr);
     column-gap: 2em;
-    row-gap:2em;
     
 }
 
+.nobor{
+    border-bottom: none;
+}
 
-.threecol-text1{
-    grid-column: 1/5;
-    grid-row:1;
+.r2{
+    display:grid;
+    grid-template-rows: 1fr 1fr;
+    row-gap:4em;
+}
+
+.col12-text-left{
     display:flex;
     flex-direction: column;
     align-items: start;
@@ -763,48 +705,91 @@ a .material-icons{
     align-self:flex-start;
 }
 
-.threecol-text2{
-    grid-column: 9/-1;
-    grid-row: 2;
+.col12-text-right{
     display:flex;
     flex-direction: column;
     align-items: end;
     max-width: 100%;
     text-align: end;
     justify-self:right;
-    align-self:flex-end;
+
 }
 
-.threecol-img1{
-    justify-self: center;
+
+.col12-text-right>em, .col12-text-left>em{
+    font-size: 1.5em;
+    font-weight: var(--bold-weight);
+    font-style: normal;
+    display: block;
+}
+
+.col12 video{
+    max-width: 100%;
+}
+
+
+
+
+.f1-text{
+    grid-column: 1/4;
     grid-row: 1;
-    grid-column: 5/9;
+
+}
+
+.f1-img1{
+    grid-column: 4/6;
+    grid-row: 1;
+    align-self: center;
+    border-right: var(--standard-border);
+    padding:2em;
+}
+
+.f2-text{
+    grid-column: 6/9;
+}
+
+.f2-img1{
+    grid-column: 9/11;
+    grid-row: 1;
+    align-self: center;
+}
+
+.f2-img2{
+    grid-column: 11/13;
+    grid-row: 1;
+    align-self: center;
 }
 
 
-.threecol-img2{
-    justify-self: center;
-    grid-row:2;
-    grid-column: 5/9;
-}
-
-.threecol-v1{
-    justify-self:end;
+.f3-text{
+    grid-column:2/5;
     grid-row:1;
-    grid-column: 9/-1;
-    max-width: 100%;
 }
 
-.threecol-v2{
-    justify-self:left;
+.f3-img{
+    grid-column:6/8;
+    grid-row:1;
+}
+
+.f3-v{
+    grid-column: 9/11;
+    grid-row:1;
+}
+
+.f4-text{
+    grid-column:2/5;
     grid-row:2;
-    grid-column: 1/5;
 }
 
-.threecol-v1 video, .threecol-v2 video{
-    max-width: 100%;
+.f4-img{
+    grid-column:6/8;
+    grid-row:2;
 }
 
+.f4-v{
+    grid-column: 9/11;
+    grid-row:2;
+}
 
 
 
