--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@
 	/* font-weight: var(--bold-weight);  */
   }
 
+.selector-for-some-widget {
+box-sizing: content-box;
+}
 
 HTML{
 	scroll-behavior: smooth;
@@ -348,7 +351,7 @@ a .material-icons{
     --item-desc: 2.8rem;
     transition: var(--transition);
     overflow: visible;
-    border-bottom: var(--standard-border);
+    border-bottom: none;
 }
 
 .history>.inner {
@@ -607,7 +610,7 @@ a .material-icons{
 
 
 /* CU */
-.twotext{
+/* .twotext{
     display:flex;
 }
 .t1{
@@ -650,18 +653,20 @@ a .material-icons{
 
 .polaroid {
     width: 80%;
-    background-color: #FFFFFF; /*color of unbleached silk, no it's not working*/
+    background-color: #FFFFFF; 
     box-shadow: 0px 4px 9px 0px var(--border);
     margin-bottom: 1rem;
-  }
+}
   
 .polartext p{
     text-align: center;
     padding: 1em 2em;
 
 }
+*/
 
 
+/* big number  */
 .bignumber {
     font-size: 5em;
     color: var(--secondary);
@@ -684,23 +689,6 @@ a .material-icons{
     top: 0;
     right: 10%;
     transition: var(--transition);
-}
-
-.col12{
-    display:grid;
-    grid-template-columns: repeat(12,1fr);
-    column-gap: 2em;
-    
-}
-
-.nobor{
-    border-bottom: none;
-}
-
-.r2{
-    display:grid;
-    grid-template-rows: 1fr 1fr;
-    row-gap:4em;
 }
 
 .col12-text-left{
@@ -731,72 +719,21 @@ a .material-icons{
     display: block;
 }
 
-.col12 video{
-    max-width: 100%;
+.nobor{
+    border-bottom: none;
 }
 
-
-
-
-.f1-text{
-    grid-column: 1/4;
-    grid-row: 1;
-
+.r2{
+    display:grid;
+    grid-template-rows: 1fr 1fr;
+    row-gap:4em;
 }
 
-.f1-img1{
-    grid-column: 4/6;
-    grid-row: 1;
-    align-self: center;
-    border-right: var(--standard-border);
-    padding:2em;
-}
-
-.f2-text{
-    grid-column: 6/9;
-}
-
-.f2-img1{
-    grid-column: 9/11;
-    grid-row: 1;
-    align-self: center;
-}
-
-.f2-img2{
-    grid-column: 11/13;
-    grid-row: 1;
-    align-self: center;
-}
-
-
-.f3-text{
-    grid-column:2/5;
-    grid-row:1;
-}
-
-.f3-img{
-    grid-column:6/8;
-    grid-row:1;
-}
-
-.f3-v{
-    grid-column: 9/11;
-    grid-row:1;
-}
-
-.f4-text{
-    grid-column:2/5;
-    grid-row:2;
-}
-
-.f4-img{
-    grid-column:6/8;
-    grid-row:2;
-}
-
-.f4-v{
-    grid-column: 9/11;
-    grid-row:2;
+.col12{
+    display:grid;
+    grid-template-columns: repeat(12,1fr);
+    column-gap: 2em;
+    
 }
 
 
@@ -815,24 +752,6 @@ a .material-icons{
 
 
 
-
-/* Temporary style */
-.problem-demo{
-    background-color: black;
-    height: 500px;
-    width:100%;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.problem-demo p{
-    color: grey;
-    font-size: large;
-    display:inline-block;
-    margin-left: 125px;
-    text-align: center;
-}
 
 
 
